# Glacier

./: .gitignore  Makefile  README.md  docker-compose.yml
Iceberg/: Dockerfile  agent.py  cold_storage.py
Iceberg/glacier/: example_companies.csv  example_deals.csv
agent/: Cargo.toml  Dockerfile  main.py  requirements.txt
agent/models/: checksum.py  signature.py
agent/src/: core.py  core.rs  environment.py  environment.rs  file.rs  main.rs  signature.rs
agent/src/config/: environment.rs  logger.rs  mod.rs
agent/src/constants/: logs.py
agent/src/core/: core.rs  mod.rs
agent/src/handlers/: checksum.py  file.py  signature.py
agent/src/models/: file.py
agent/src/security/: security.rs
agent/src/storage/: file_handler.rs  mod.rs  signature_handler.rs
agent/src/utils/: constants.rs
