[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
env_logger = "0.11.7"
fern = "0.7.1"
hex = "0.4.3"
log = "0.4.26"
mongodb = "3.2.2"
rs_merkle = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
tokio = "1.44.1"

[[bin]]
name = "agent"
path = "src/main.rs"
